# Smart-Weather-Monitoring-IoT-System

./: Broker.py  Forecast.py  README.md  influxdata.csv  server.py
Art/: CMakeLists.txt  sdkconfig  sdkconfig.old
Art/components/coap/examples/coap_client/main/: coap_client_example_main.c
Art/main/: CMakeLists.txt  DHT22.c  coap_server_example_main.c  main.c  veml7700.c  veml7700.h
